k8s-security-framework/policies/metadata/KSP-META-003/tests/exception-policy-for-specific-resources.yaml
apiVersion: policies.kyverno.io/v1
kind: PolicyException
metadata:
  name: require-environment-label-exception
  namespace: policy-test
spec:
  policyRefs:
  - name: require-environment-label
    kind: ValidatingPolicy
  matchConditions:
  - name: match-exempt-resource
    expression: object.metadata.name in ['ksp-meta-003-exception', 'ksp-meta-003-exception-secondary',
      'ksp-meta-003-exception-tertiary'] && object.metadata.namespace == 'policy-test'
