k8s-security-framework/policies/metadata/KSP-META-003/tests/exception-resources-with-policy-violation.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ksp-meta-003-exception
  namespace: policy-test
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: demo-api
  template:
    metadata:
      labels:
        app.kubernetes.io/name: demo-api
    spec:
      containers:
      - name: demo-api
        image: harbor.example.com/demo-api:1.0.0
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ksp-meta-003-exception-secondary
  namespace: policy-test
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: demo-api
  template:
    metadata:
      labels:
        app.kubernetes.io/name: demo-api
    spec:
      containers:
      - name: demo-api
        image: harbor.example.com/demo-api:1.0.0
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ksp-meta-003-exception-tertiary
  namespace: policy-test
  labels:
    policies.ksp.io/environment: prod
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: demo-api
  template:
    metadata:
      labels:
        policies.ksp.io/environment: prod
        app.kubernetes.io/name: demo-api
    spec:
      containers:
      - name: demo-api
        image: harbor.example.com/demo-api:1.0.0
