k8s-security-framework/policies/metadata/KSP-META-003/tests/exception.yaml
apiVersion: kyverno.io/v2
kind: PolicyException
metadata:
  name: require-environment-label-exception
  namespace: policy-test
spec:
  exceptions:
    - policyName: require-environment-label
      ruleNames:
        - require-environment-label
  match:
    any:
      - resources:
          kinds:
            - Deployment
          names:
            - ksp-meta-003-exception
          namespaces:
            - policy-test
