k8s-security-framework/policies/metadata/KSP-META-003/tests/negative-deployment-with-invalid-prod-environment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: meta-003-negative
  namespace: policy-test
  labels:
    policies.ksp.io/environment: prod
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: demo-api
  template:
    metadata:
      labels:
        policies.ksp.io/environment: prod
        app.kubernetes.io/name: demo-api
    spec:
      containers:
        - name: demo-api
          image: harbor.example.com/demo-api:1.0.0
